--- a/Media/style_space.css
+++ b/Media/style_space.css
@@ -9,6 +9,10 @@ body {
     position: relative;
 }
 
+/* ########################### */
+/* Background Layers */
+/* ########################### */
+
 ._Background_Layer_0
 {
     position: fixed;    top: 0; left: 0;
@@ -18,7 +22,7 @@ body {
     background-repeat: repeat;
     image-rendering: pixelated;
     background-attachment: fixed;
-    background-size: 100vw;
+    background-size: 50vw;
 
     z-index: -99999;    opacity: 0.5;
 
@@ -33,11 +37,11 @@ body {
     background-repeat: repeat;
     image-rendering: pixelated;
     background-attachment: fixed;
-    background-size: 50vw;
+    background-size: 60vw;
 
     opacity: 0.5;   z-index: -99998;    mix-blend-mode: screen;
 
-    animation: _Animation_Background_Scroll 180s linear infinite;
+    animation: _Animation_Background_Scroll 120s linear infinite;
 }
 
 ._Background_Layer_2 {
@@ -51,13 +55,30 @@ body {
     background-size: 75vw;
 
     opacity: 0.25;  z-index: -99997;    mix-blend-mode: screen;
-    animation: _Animation_Background_Scroll 2000s linear infinite;
+    animation: _Animation_Background_Scroll 360s linear infinite;
+}
+
+._Background_Layer_3 {
+    position: fixed;    top: 0; left: 0;
+    width: 100%;    height: 100%;
+
+    background-image: url("Background/Space_2.png");
+    background-repeat: repeat;
+    image-rendering: pixelated;
+    background-attachment: fixed;
+    background-size: 20vw;
+
+    opacity: 0.25;  z-index: -99996;    mix-blend-mode: screen;
 }
 
 @keyframes _Animation_Background_Scroll {
     from { background-position: 0 0; }
     to   { background-position: 384px 384px; }
 }
+
+/* ########################### */
+/* Info Window */
+/* ########################### */
 
 ._Window_Info {
     position: absolute;
@@ -71,7 +92,6 @@ body {
 
     font-family: sans-serif;
 }
-
 
 ._Window_Header
 {
@@ -124,3 +144,27 @@ body {
     object-fit: contain;
 }
 
+/* ########################### */
+/* Mouse */
+/* ########################### */
+
+._Mouse_Stars
+{
+    position: fixed;
+
+    width: 3px; height: 3px;
+
+    pointer-events: none;
+
+    opacity: 1;     z-index: 9999;      image-rendering: pixelated;
+    animation: _Stars_Fall 1.5s ease-out forwards;
+}
+
+@keyframes _Stars_Fall {
+    0% {
+        transform: translateY(0) scale(1);
+    }
+    100% {
+        transform: translateY(100px) scale(0);
+    }
+}
