--- a/Media/style_space.css
+++ b/Media/style_space.css
@@ -97,7 +97,7 @@ body
         0 0 0 2px white,
         0 0 0 4px black;
 
-    font-family: "Comic Neue", cursive;
+    font-family: "Comic Neue", cursive, "Arial", sans-serif;
     font-weight: 300;
     font-style: normal;
 
@@ -276,7 +276,7 @@ body
         0 0 0 2px white,
         0 0 0 4px black;
 
-    font-family: "Comic Neue", cursive;
+    font-family: "Comic Neue", cursive, "Arial", sans-serif;
     font-weight: 300;
     font-style: normal;
     font-size: 24px;    color: white;
