--- a/Media/style_space.css
+++ b/Media/style_space.css
@@ -341,6 +341,7 @@ body
     margin-right: 6px;
 }
 
+/* hel nah, not workn */
 @media (max-width: 600px), (pointer: coarse) {
   body, ._Window_Info, ._Main_Content {
     font-family: sans-serif !important;
