--- a/Media/style_space.css
+++ b/Media/style_space.css
@@ -104,18 +104,38 @@ body
     position: relative;
 }
 
+@keyframes borderWave {
+    0% {
+        filter: hue-rotate(55deg);
+        transform: perspective(500px) rotateX(0deg) rotateY(0deg);
+    }
+    50% {
+        filter: hue-rotate(169deg);
+        transform: perspective(500px) rotateX(2deg) rotateY(-2deg);
+    }
+    100% {
+        filter: hue-rotate(306deg);
+        transform: perspective(500px) rotateX(0deg) rotateY(2deg);
+    }
+}
+
 ._Window_Info::after {
     content: "";
     position: absolute;
-    top: -16px; left: -16px; right: -16px; bottom: -16px;
+    top: -48px; left: -48px; right: -48px; bottom: -48px;
     z-index: -1;
     pointer-events: none;
 
-    border: 16px solid transparent;
-    border-image: url("Background/Shadow_Dither.png") 16 fill repeat;
+    border: 48px solid transparent;
+    border-image: url("Background/Border.png") 48 fill repeat;
 
     image-rendering: pixelated;
     border-radius: 20px;
+
+    mix-blend-mode:color-dodge;
+    
+    animation: borderWave 100s ease-in-out infinite;
+    transform-origin: center center;
 }
 
 ._Window_Header
@@ -324,13 +344,29 @@ body
     margin: 0;
     padding-left: 0;
     list-style: none;
-    
+    width: 100%;
 }
 
 ._Nav_List li {
     display: flex;
     align-items: center;
-    margin-bottom: 2px;
+    margin: 0 -16px 2px -16px;
+    padding: 4px 16px;
+    width: calc(clamp(200px, 20vw, 300px) - 32px);
+    transition: all 0.3s ease-in-out;
+}
+
+._Nav_List li:hover {
+    background-color: rgba(128, 0, 255, 0.3);
+}
+
+@keyframes _AniRot {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 ._Nav_Icon {
@@ -339,6 +375,15 @@ body
     vertical-align: middle;
     image-rendering: pixelated;
     margin-right: 6px;
+    transition: 0.3s ease-in-out, transform 0.3s ease-in-out;
+    animation: _AniRot 30s linear infinite;
+    animation-play-state: paused;
+}
+
+._Nav_List li:hover ._Nav_Icon {
+    animation-play-state: running;
+    transform: scale(1.1);
+    image-rendering: pixelated;
 }
 
 /* hel nah, not workn */
